deploy: fa8cedbbcbcc3961069d6922c2d6a26b7b5e358e

--- a/partitioning.html
+++ b/partitioning.html
@@ -777,6 +777,7 @@ Number of leafs: 32
 <img alt="_images/partitioning_18_1.png" src="_images/partitioning_18_1.png" />
 </div>
 </div>
+<p>The advantage of octrees/quadtrees is visible. The data structure is uniform. However, we create more children than in a simple binary cluster tree. Traditionally octrees/quadtrees are used for Fast Multipole type methods and binary cluster trees are used for Hierarchical Matrices.</p>
 </section>
 </section>
 
