--- a/low_rank_compression.html
+++ b/low_rank_compression.html
@@ -55,7 +55,7 @@ const thebe_selector_output = ".output, .cell_output"
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Tree partitioning" href="partitioning.html" />
-    <link rel="prev" title="BEM Summer School Lecture Notes" href="intro.html" />
+    <link rel="prev" title="&lt;no title&gt;" href="discretisation.html" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="docsearch:language" content="None">
     
@@ -818,11 +818,11 @@ A = F^T(G - C)F + S.
                 
     <!-- Previous / next buttons -->
 <div class='prev-next-area'>
-    <a class='left-prev' id="prev-link" href="intro.html" title="previous page">
+    <a class='left-prev' id="prev-link" href="discretisation.html" title="previous page">
         <i class="fas fa-angle-left"></i>
         <div class="prev-next-info">
             <p class="prev-next-subtitle">previous</p>
-            <p class="prev-next-title">BEM Summer School Lecture Notes</p>
+            <p class="prev-next-title">&lt;no title&gt;</p>
         </div>
     </a>
     <a class='right-next' id="next-link" href="partitioning.html" title="next page">
